--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,8 @@
 theme: jekyll-theme-minimal
 title: Lista de Curadoria do Clube do Livro
-description: Teste
+description: Lista de curadoria de links e conteúdos relevantes para o clube do livro da Saphyr.
 plugins:
   - jekyll-relative-links
 relative_links:
   enabled: true
   collections: true
-include:
-  - CONTRIBUTING.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
